@@ -1,3 +1,5 @@
+2005/12/4 -- released version 20051204_trunk
+
 2005/12/3 -- released version 20051203_trunk
 
 * really send a test email with 'tSmoke --testmail' -- niko
